--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="app.css">
 </head>
 
-<body class="skin-blu fixed sidebar-mini">
+<body class="skin-blue fixed sidebar-mini">
     <div id="app"></div>
     <script src="app.js"></script>
 </body>
